--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,9 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
+    "compilerOptions": {
+      "skipLibCheck": true
+    },
     "sourceMap": true,
     "baseUrl": ".",
     "types": [
