--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,9 +9,7 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "compilerOptions": {
-      "skipLibCheck": true
-    },
+    "skipLibCheck": true,
     "sourceMap": true,
     "baseUrl": ".",
     "types": [
