--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.29",
+    "@fortawesome/free-solid-svg-icons": "^5.13.1",
+    "@fortawesome/vue-fontawesome": "^0.1.10",
     "animate.css": "^4.1.0",
     "bootstrap": "^4.5.0",
     "bootstrap-vue": "^2.15.0",
