--- a/src/tutorials/faq/config.json
+++ b/src/tutorials/faq/config.json
@@ -4,6 +4,15 @@
       "name": "FirstSlide",
       "title": "EMX: Frequently Asked Questions",
       "isFirst": true
+    },
+    {
+      "name": "MetadataSlide",
+      "title": "Metadata issues"
+    },
+    {
+      "name": "AttributesSlide",
+      "title": "Attributes sheet issues",
+      "steps": 7
     }
   ]
 }
