feat(faq): finish FAQ tutorial

--- a/src/tutorials/faq/config.json
+++ b/src/tutorials/faq/config.json
@@ -22,7 +22,11 @@
     {
       "name": "DataSlide",
       "title": "Data issues",
-      "steps": 10
+      "steps": 15
+    },
+    {
+      "name": "EndSlide",
+      "title": "Summary"
     }
   ]
 }
