feat(slideshow): add prev and next button

--- a/src/tutorials/import/config.json
+++ b/src/tutorials/import/config.json
@@ -12,7 +12,8 @@
     },
     {
       "name": "end-slide",
-      "title": "summary"
+      "title": "summary",
+      "isLast": true
     }
   ]
 }
