--- a/src/tutorials/faq/config.json
+++ b/src/tutorials/faq/config.json
@@ -26,7 +26,8 @@
     },
     {
       "name": "EndSlide",
-      "title": "Summary"
+      "title": "Summary",
+      "isLast": true
     }
   ]
 }
