fix(eslint): make eslint more tolerant
Please the eslint gods so that they silently accept my beautiful tests just the way they are

--- a/package.json
+++ b/package.json
@@ -58,9 +58,10 @@
     "extends": [
       "plugin:vue/essential",
       "@vue/standard",
-      "@vue/typescript/recommended"
+      "@vue/typescript"
     ],
     "parserOptions": {
+      "parser": "@typescript-eslint/parser",
       "ecmaVersion": 2020
     },
     "rules": {},
