style(bootstrap): update bootstrap theme and all things that correspond with it

--- a/src/tutorials/faq/config.json
+++ b/src/tutorials/faq/config.json
@@ -11,12 +11,12 @@
     },
     {
       "name": "AttributesSlide",
-      "title": "Attributes sheet issues",
+      "title": "Attributes issues",
       "steps": 7
     },
     {
       "name": "EntitiesPkgsSlide",
-      "title": "Entities and packages sheet issues",
+      "title": "Entities and packages issues",
       "steps": 2
     },
     {
