improvement(plugins): add slides for importers + component for difficulty

--- a/src/tutorials/plugins/config.json
+++ b/src/tutorials/plugins/config.json
@@ -14,6 +14,10 @@
       "title": "Advanced importer"
     },
     {
+      "name": "quick-importer-slide",
+      "title": "Quick importer"
+    },
+    {
       "name": "end-slide",
       "title": "Summary",
       "isLast": true
